Bug 498249 - "Ignored applications" doesn’t work for Flatpak apps
Summary: "Ignored applications" doesn’t work for Flatpak apps
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_smserver (other bugs)
Version First Reported In: 6.2.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 498417 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-01-04 15:17 UTC by sekcobra
Modified: 2025-10-22 19:52 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sekcobra 2025-01-04 15:17:42 UTC
SUMMARY
Flatpak RustDesk is (re)started on login, regardless of setting in “(KDE) System Settings > Session > Desktop Session > Ignored applications:”

STEPS TO REPRODUCE
1. Set "konsole,rustdesk,com.rustdesk.RustDesk" in “(KDE) System Settings > Session > Desktop Session > Ignored applications:”
2. Open (flatpak) RustDesk with Session Restore option "On last logout" and Konsole
3. log off or reboot
4. login

OBSERVED RESULT
RustDesk reopens, Konsole does not

EXPECTED RESULT
RustDesk doesn't open, Konsole doesn't open

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tubmleweed 20250102
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1

ADDITIONAL INFORMATION
Further details/attempted tests: https://discuss.kde.org/t/desktop-session-ignored-applications-doesnt-apply-for-flatpak-rustdesk/27769
Comment 1 Bug Janitor Service 2025-01-08 12:34:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5039
Comment 2 Bug Janitor Service 2025-01-08 12:35:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2701
Comment 3 Harald Sitter 2025-01-08 14:20:51 UTC
Git commit 5ce6dbd1727a0f747ca047480bf4850198925182 by Harald Sitter.
Committed on 08/01/2025 at 13:55.
Pushed by sitter into branch 'master'.

session-restore/save: exclude applications

this was previously not implemented at all.

we expand the accepted values of the excludeApps key to also include
desktop file ids now since on wayland we don't care about executable
names

M  +12   -0    startkde/session-restore/save.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/5ce6dbd1727a0f747ca047480bf4850198925182
Comment 4 Harald Sitter 2025-01-08 15:12:47 UTC
Git commit 944993d986ed9b84461f1d9c6ac325c29c42f99b by Harald Sitter.
Committed on 08/01/2025 at 12:32.
Pushed by sitter into branch 'master'.

kcms/ksmserver: expand coverage of excluded apps

on wayland we only care about desktop file ids

M  +1    -1    kcms/ksmserver/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/944993d986ed9b84461f1d9c6ac325c29c42f99b
Comment 5 Harald Sitter 2025-01-09 12:25:26 UTC
*** Bug 498417 has been marked as a duplicate of this bug. ***