session-restore/save: exclude applications

this was previously not implemented at all.

we expand the accepted values of the excludeApps key to also include
desktop file ids now since on wayland we don't care about executable
names

BUG: 498249